back/komp/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o komp/
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml -o komp/
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/php-net: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx-kub8
          ports:
            - containerPort: 80
          resources: {}
      hostname: nginx-kub8
      restartPolicy: Always
status: {}
