back/komp/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o komp/
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: php
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml -o komp/
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/db-net: "true"
        io.kompose.network/php-net: "true"
        io.kompose.service: php
    spec:
      containers:
        - image: php
          name: php-kub8
          ports:
            - containerPort: 9000
          resources: {}
      hostname: php-kub8
      restartPolicy: Always
status: {}
