back/komp/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o komp/
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
